test/errors/matchcompile/match_redundant_pattern/main.sk
module Bool {

enum Bool {
    True,
    False
}

}

module Main {

fn main() {
    match True {
        True -> (),
        True -> (),
        False -> (),
    };
}

}
     
